@@ -11,36 +11,40 @@
 	$group_guid = (int) get_input("group_guid");
 	$group = get_entity($group_guid);
 
-	if(group_custom_layout_allow($group) && $group->canEdit()) {
-		// set context and page owner
-		elgg_push_context("groups");
-		elgg_set_page_owner_guid($group_guid);
-		
-		$title_text = elgg_echo("group_custom_layout:edit:title");
-
-		// make breadcrumb
-		elgg_push_breadcrumb(elgg_echo("groups"), "groups/all");
-		elgg_push_breadcrumb($group->name, $group->getURL());
-		elgg_push_breadcrumb($title_text);
-
-		$params = array(
-			"filter" => "",
-			"title" => $title_text
-		);
-
-		$layout = group_custom_layout_get_layout($group);
-
-		$params["content"] = elgg_view_form("group_custom_layout/save", 
-								array("id" => "editForm", "enctype" => "multipart/form-data"), 
-								array("entity" => $group, "group_custom_layout" => $layout)
-							);
-
-		$body = elgg_view_layout("content", $params);
-
-		echo elgg_view_page($title_text, $body);
-		
-		// reset context
-		elgg_pop_context();
+	if (!empty($group) && elgg_instanceof($group, "group")) {
+		if(group_custom_layout_allow($group) && $group->canEdit()) {
+			// set context and page owner
+			elgg_push_context("groups");
+			elgg_set_page_owner_guid($group_guid);
+			
+			$title_text = elgg_echo("group_custom_layout:edit:title");
+	
+			// make breadcrumb
+			elgg_push_breadcrumb(elgg_echo("groups"), "groups/all");
+			elgg_push_breadcrumb($group->name, $group->getURL());
+			elgg_push_breadcrumb($title_text);
+	
+			$params = array(
+				"filter" => "",
+				"title" => $title_text
+			);
+	
+			$layout = group_custom_layout_get_layout($group);
+	
+			$params["content"] = elgg_view_form("group_custom_layout/save",
+									array("id" => "editForm", "enctype" => "multipart/form-data"),
+									array("entity" => $group, "group_custom_layout" => $layout)
+								);
+	
+			$body = elgg_view_layout("content", $params);
+	
+			echo elgg_view_page($title_text, $body);
+			
+			// reset context
+			elgg_pop_context();
+		} else {
+			forward(REFERER);
+		}
 	} else {
 		forward(REFERER);
 	}
